# jason_note

./: .gitignore  404.html  LICENSE  Makefile  README.md  SUMMARY.md  binary_tree.dot  book.toml  gen_tree.py  index.html  package-lock.json  package.json  print.html  searchindex.js  searchindex.json  toc.html  toc.js  ubuntu_setup.html  vim.html
android/src/flutter_rust_bridge/: .gitignore  Cargo.toml  full_demo.sh  logcat_bitopro.sh  run_all_tests.sh  test_rust_locally.sh  test_with_logs.sh
android/src/flutter_rust_bridge/.cargo/: config.toml
android/src/flutter_rust_bridge/.github/workflows/: ci.yml
android/src/flutter_rust_bridge/flutter_app/: pubspec.yaml
android/src/flutter_rust_bridge/flutter_app/android/: local.properties
android/src/flutter_rust_bridge/flutter_app/lib/: main.dart
android/src/flutter_rust_bridge/flutter_app/test/: rust_bridge_test.dart  rust_bridge_unit_test.dart
android/src/flutter_rust_bridge/src/: lib.rs
gdb/data/llama.cpp/tools/server/: CMakeLists.txt  server.cpp  utils.hpp
gdb/data/llama.cpp/tools/server/webui/: package.json  svelte.config.js
hft/src/test_api_server/cpp-client/: CMakeLists.txt  Makefile  cpp_client  cpp_client_hft
hft/src/test_api_server/rust-client/: Cargo.toml
hft/src/test_api_server/rust-client/src/: main.rs
rust/src/bitopro-client-rust/: Cargo.toml
rust/src/bitopro-client-rust/src/: main.rs
rust/src/grpcrs/: Cargo.toml
rust/src/pythonista-to-rustacean/ch09_pyo3/07_exception_example/: Cargo.toml  pyproject.toml
rust/src/pythonista-to-rustacean/ch09_pyo3/12_getter_setter_example/: pyproject.toml
rust/src/pythonista-to-rustacean/ch09_pyo3/12_getter_setter_example/src/: lib.rs
rust/src/rust_locks_test/: Cargo.toml  test_all_examples.sh
rust/src/rust_locks_test/examples/01_basic_mutexes/: error_handling.rs  shared_data_structure.rs
rust/src/rust_locks_test/examples/03_atomic_operations/: atomic_flags.rs  basic_atomic_counter.rs  compare_and_swap.rs
rust/src/rust_locks_test/src/: advanced_examples.rs  atomic_examples.rs  channel_examples.rs  main.rs  mutex_examples.rs
src/c++/data/CppTrader/CppTrader_modify/func_tracker/: CMakeLists.txt
src/cv/data/autodistill-video-project/: Makefile  color_ocr.py  detect_all.py  diagnose_ocr.py  main.py  plan.md  plot_dataset.py  pyproject.toml  quick_ocr_test.py  quick_test.py  test.py  train.py  visualize.py
src/cv/data/autodistill-video-project/tests/: test_detect_all.py
src/cv/data/price-tag-detector/: CLEAN_REBUILD.md  Makefile  OCR_IMPROVEMENTS.md  OCR_TEST_SUMMARY.md  README.md  REBUILD.md  plan.md  pyproject.toml  test_ocr_all.sh
src/cv/data/price-tag-detector/cli/: detect.py  detect_v2.py  train.py
src/cv/data/price-tag-detector/src/: ocr_engine.py  ocr_engine_v2.py
src/cv/data/price-tag-detector/tests/: test_detector.py  test_ocr_engine.py
src/cv/data/price-tag-detector/utils/: convert_labels.py  extract_frames.py
src/hft/src/test_api_server/rust-client/: Cargo.toml
src/hft/src/test_api_server/rust-client/src/: main.rs
src/ml/data/openevolve/: CONTRIBUTING.md  Dockerfile  Makefile  OpenEvolve架構與核心技術總覽.md  README.md  openevolve-run.py  pyproject.toml  setup.py
src/ml/data/openevolve/configs/: README.md  default_config.yaml  early_stopping_example.yaml  island_config_example.yaml  island_examples.yaml
src/ml/data/openevolve/examples/: README.md
src/ml/data/openevolve/examples/algotune/: README.md  requirements.txt  run_benchmark.py  task_adapter.py
src/ml/data/openevolve/examples/alphaevolve_math_problems/: README.md
src/ml/data/openevolve/examples/arc_benchmark/: README.md  base_config.yaml  post_evolution_eval.py  run_evolution.sh
src/ml/data/openevolve/examples/attention_optimization/: README.md  config.yaml  evaluator.py
src/ml/data/openevolve/examples/circle_packing/: README.md  best_program.py  config_phase_1_anthropic.yaml  evaluator.py
src/ml/data/openevolve/openevolve/: config.py  database.py  evaluator.py  evolution_trace.py  process_parallel.py
src/ml/data/openevolve/openevolve/llm/: base.py  (+1 more)
src/ml/data/openevolve/scripts/: manual.py
src/ml/data/openevolve/tests/: test_artifacts.py  test_artifacts_integration.py  test_cascade_validation.py  test_changes_description.py  test_concurrent_island_access.py  test_database.py  test_early_stopping_config.py  test_evaluator_timeout.py  test_evolution_trace.py  test_file_extension_preservation.py  test_island_isolation.py  test_island_migration.py  test_migration_no_duplicates.py  test_openai_model_detection.py  test_process_parallel.py  test_prompt_sampler.py  test_prompt_sampler_comprehensive.py  test_reasoning_effort_config.py  test_sample_from_island_ratios.py  test_valid_configs.py  test_visualization_sanitization.py
src/rust/data/ironman-2019/elf-load/: Cargo.toml
src/rust/src/pyo3_polars_extension/: Cargo.toml  test.py
src/rust/src/rust_locks_test/: Cargo.toml  README.md
src/rust/src/rust_locks_test/src/: condvar_examples.rs  refcell_examples.rs  rwlock_examples.rs
src/rust/src/simple_binance_resp_api/: Cargo.toml
src/rust/src/simple_binance_resp_api/src/: main.rs
src/rust/src/yfinance-rust/: Cargo.toml  README.md
web/data/buttplug-js-9.0.8/wasm/rust/: Cargo.toml
web/data/wasm-calculator/: .gitignore  Cargo.toml  Makefile  build.js  index.js  package-lock.json  package.json  style.css  wasm_calculator.d.ts  wasm_calculator.js  wasm_calculator_bg.wasm  wasm_calculator_bg.wasm.d.ts  webpack.config.js
web/data/wasm-calculator/src/: calculator.rs  lib.rs  parser.rs
web/data/wasm-calculator/tests/: calculator_test.rs  parser_test.rs
web/data/wasm-test-project/: .gdbinit  Cargo.toml  Makefile  benchmark.js  gdb_commands.txt  test-debug.js  test-detailed.js  test-simple.js  test-with-logs.html  test.js
web/data/wasm-test-project/pkg/: package.json  wasm_test_project.d.ts  wasm_test_project.js  wasm_test_project_bg.wasm  wasm_test_project_bg.wasm.d.ts
web/data/wasm-test-project/pkg-debug/: wasm_test_project.d.ts  wasm_test_project.js  wasm_test_project_bg.wasm  wasm_test_project_bg.wasm.d.ts
web/data/wasm-test-project/src/: lib.rs
(+16175 files in other folders)
