[package]
name = "rust_to_flutter"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_flutter_bridge"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
android_logger = "0.13"
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
tokio-test = "0.4"