[package]
name = "bitopro_client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.19", features = ["native-tls"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.3"
http = "0.2"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
hex = "0.4"
