[package]
name = "grpcrs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "user-server"
path = "src/user/server.rs"

[[bin]]
name = "user-client"
path = "src/user/client.rs"

[dependencies]
tonic = "0.7.2"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread"] }
prost = "0.10"

[build-dependencies]
tonic-build = "0.7.2"
