[package]
name = "rust_locks_test"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam = "0.8"

[[bin]]
name = "mutex_examples"
path = "src/mutex_examples.rs"

[[bin]]
name = "rwlock_examples"
path = "src/rwlock_examples.rs"

[[bin]]
name = "atomic_examples"
path = "src/atomic_examples.rs"

[[bin]]
name = "channel_examples"
path = "src/channel_examples.rs"

[[bin]]
name = "condvar_examples"
path = "src/condvar_examples.rs"

[[bin]]
name = "refcell_examples"
path = "src/refcell_examples.rs"

[[bin]]
name = "advanced_examples"
path = "src/advanced_examples.rs"

[[bin]]
name = "all_examples"
path = "src/main.rs"

# 01. Basic Mutexes Examples
[[example]]
name = "basic_counter"
path = "examples/01_basic_mutexes/basic_counter.rs"

[[example]]
name = "shared_data_structure"
path = "examples/01_basic_mutexes/shared_data_structure.rs"

[[example]]
name = "error_handling"
path = "examples/01_basic_mutexes/error_handling.rs"

# 03. Atomic Operations Examples
[[example]]
name = "basic_atomic_counter"
path = "examples/03_atomic_operations/basic_atomic_counter.rs"

[[example]]
name = "atomic_flags"
path = "examples/03_atomic_operations/atomic_flags.rs"

[[example]]
name = "compare_and_swap"
path = "examples/03_atomic_operations/compare_and_swap.rs"