[package]
name = "wasm-calculator"
version = "0.1.0"
authors = ["WASM Calculator Team"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"

[dependencies.web-sys]
version = "0.3.69"
features = [
    "Window",
    "Document",
    "Node",
    "Element",
    "HtmlElement",
    "HtmlDivElement",
    "HtmlButtonElement",
    "EventTarget",
    "Event",
    "MouseEvent",
    "CssStyleDeclaration",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[profile.release]
opt-level = "z"
lto = true
