[package]
name = "wasm-test-project"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Performance",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true