[package]
name = "rust-client"
version = "0.1.0"
edition = "2021"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
bytes = "1.5"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
hyper = { version = "0.14", features = ["client", "http2"] }
hyper-tls = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
clap = { version = "4", features = ["derive"] }
statrs = "0.16"
crossbeam = "0.8"
parking_lot = "0.12"
core_affinity = "0.8"
libc = "0.2"
