[package]
name = "rust_locks_test"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam = "0.8"

[[bin]]
name = "mutex_examples"
path = "src/mutex_examples.rs"

[[bin]]
name = "rwlock_examples"
path = "src/rwlock_examples.rs"

[[bin]]
name = "atomic_examples"
path = "src/atomic_examples.rs"

[[bin]]
name = "channel_examples"
path = "src/channel_examples.rs"

[[bin]]
name = "condvar_examples"
path = "src/condvar_examples.rs"

[[bin]]
name = "refcell_examples"
path = "src/refcell_examples.rs"

[[bin]]
name = "advanced_examples"
path = "src/advanced_examples.rs"

[[bin]]
name = "all_examples"
path = "src/main.rs"