[package]
name = "rust_rest_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serde = "1.0.104"
serde_json = "1.0.45"
serde = { version = "1.0.126", features = ["derive"] }
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
