[package]
name = "yfinance-rust"
version = "0.1.0"
authors = ["Hongze Xia <hongzex@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "3.0.0-beta.2"
url = "2.2.0"
hyper = { version = "0.14", features = ["http1", "client", "stream"] }
hyper-tls = "0.5.0"
tokio = { version = "1", features = ["full"] } # full
tokio-util = { version = "0.6.1", features=["compat"] }
futures = "0.3.12"
log = "0.4"
env_logger = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.10.0"
csv = "1.1.5"

[dev-dependencies]
rand = "0.8.3"