[package]
name = "exception_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "exception_example"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.226", features = ["derive"] }
pyo3 = "0.26.0"
serde_json = "1.0.145"
