[package]
name = "elf-load"
version = "0.1.0"
authors = ["DanSnow <dododavid006@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goblin = { version = "0.0.24", default-features = false, features = ["std", "elf32", "elf64", "endian_fd"] }
nix = "0.15.0"
dlopen = "0.1.8"
once_cell = "1.1.0"
