[package]
name = "buttplug_wasm"
version = "7.1.5"
authors = ["Nonpolynomial Labs, LLC <kyle@nonpolynomial.com>"]
description = "WASM Interop for the Buttplug Intimate Hardware Control Library"
license = "BSD-3-Clause"
homepage = "http://buttplug.io"
repository = "https://github.com/buttplugio/buttplug.git"
readme = "./README.md"
keywords = ["usb", "serial", "hardware", "bluetooth", "teledildonics"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "buttplug_wasm"
path = "src/lib.rs"

[dependencies]
# Use git version since 9.0.8 crate seems to have issues with wasm
buttplug = { git = "https://github.com/buttplugio/buttplug", branch = "master", default-features = false, features = ["wasm"] }
buttplug_derive = "0.8.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
js-sys = "0.3.68"
tracing-wasm = "0.2.1"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
console_error_panic_hook = "0.1.7"
wasmtimer = "0.2.0"
wasm-bindgen = { version = "0.2.91", features = ["serde-serialize"] }
tokio = { version = "1.46.1", features = ["sync", "macros", "io-util"] }
tokio-stream = "0.1.17"
tracing = "0.1.41"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
futures = "0.3.31"
futures-util = "0.3.31"
async-trait = "0.1.88"
wasm-bindgen-futures = "0.4.41"

[dependencies.web-sys]
version = "0.3.68"
# path = "../../wasm-bindgen/crates/web-sys"
#git = "https://github.com/rustwasm/wasm-bindgen"
features = [
  "Navigator",
  "Bluetooth",
  "BluetoothDevice",
  "BluetoothLeScanFilterInit",
  "BluetoothRemoteGattCharacteristic",
  "BluetoothRemoteGattServer",
  "BluetoothRemoteGattService",
  "BinaryType",
  "Blob",
  "console",
  "ErrorEvent",
  "Event",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "RequestDeviceOptions",
  "WebSocket",
  "Window"
]

[target.wasm32-unknown-unknown.dependencies]
getrandom_old = { version = "0.2.15", features = ["js"], package = "getrandom"}
