[package]
name = "call_python"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.22.2", features = ["auto-initialize"] }
pyo3-ffi = { version = "0.22.2", features = ["extension-module"] }
