[package]
name = "candle_mnist"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", features = [
    "metal",
] }
candle-datasets = { git = "https://github.com/huggingface/candle.git", version = "0.9.1" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", features = [
    "metal",
] }
hf-hub = "0.4.3"
image = "0.25.8"
parquet = "51.0.0"
rayon = "1.11.0"
