[package]
name = "candle_distilbert"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", features = [
    "metal",
] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", features = [
    "metal",
] }
hf-hub = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokenizers = "0.22.1"
approx = "0.5.1"
