[package]
name = "sqlx_mysql_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.30"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "mysql"] }
tokio = { version = "1.36.0", features = ["full"] }
